# docker_blueprints

./: README.md  README.rst  blueprint_gdal.Dockerfile  blueprint_glog.Dockerfile  blueprint_ktx.Dockerfile  blueprint_nglog.Dockerfile  blueprint_open3d.Dockerfile  blueprint_pdal.Dockerfile  blueprint_s2geometry.Dockerfile  blueprint_tinycudann.Dockerfile  docker-compose.yml  maintenance.yml
.circleci/: config.yml  docker-compose.yml
glog11/: CMakeLists.txt  README.md  py_glog11.cpp  py_glog11.h  pyproject.toml  requirements310.txt
glog11/tests/: test_glog11.py
nglog/: CMakeLists.txt  LICENSE  README.md  py_nglog.cpp  py_nglog.h  pyproject.toml  requirements.in  requirements312.txt  requirements313.txt
nglog/tests/: test_nglog11.py
pyglog/: CMakeLists.txt  README.md  py_glog.cpp  py_glog.h  pyproject.toml  requirements311.txt  requirements38.txt  requirements39.txt
pyglog/tests/: test_glog11.py
tests/: docker-compose.yml  test-gdal.bsh  test-glog.bsh  test-ktx.bsh  test-nglog.bsh  test-open3d.bsh  test-pdal.bsh  test-s2geometry.bsh  test-tinycudann.bsh  test_gdal.Dockerfile  test_glog.Dockerfile  test_ktx.Dockerfile  test_nglog.Dockerfile  test_open3d.Dockerfile  test_pdal.Dockerfile  test_s2geometry.Dockerfile  test_tinycudann.Dockerfile
